// Copyright 2025 Gravitational, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package teleport.recordingmetadata.v1;

import "teleport/recordingmetadata/v1/recordingmetadata.proto";

option go_package = "github.com/gravitational/teleport/api/gen/proto/go/teleport/recordingmetadata/v1;recordingmetadatav1";

// RecordingMetadataService provides methods to retrieve details about session recordings.
service RecordingMetadataService {
  // GetThumbnails retrieves the thumbnails for many session recordings.
  rpc GetThumbnails(GetThumbnailsRequest) returns (GetThumbnailsResponse);
  // GetMetadata retrieves the metadata for a session recording.
  rpc GetMetadata(GetMetadataRequest) returns (GetMetadataResponse);
}

// GetThumbnailsRequest is a request for retrieving multiple session's thumbnails.
message GetThumbnailsRequest {
  // SessionIds are the ID of the sessions whose thumbnails are being requested.
  repeated string session_ids = 1;
}

message RecordingThumbnail {
  // SessionId is the ID of the session for which the thumbnail is being retrieved.
  string session_id = 1;
  // Thumbnail is the thumbnail of the session.
  teleport.recordingmetadata.v1.SessionRecordingThumbnail thumbnail = 2;
}

// GetThumbnailsResponse is a response for retrieving multiple session's thumbnails.
message GetThumbnailsResponse {
  // Thumbnails contains the thumbnails for the requested sessions.
  repeated RecordingThumbnail thumbnails = 1;
}

// GetMetadataRequest is a request for retrieving a session's m
message GetMetadataRequest {
  // SessionId is the ID of the session whose metadata is being requested.
  string session_id = 1;
}

// GetMetadataResponse is a response for retrieving a session's metadata.
message GetMetadataResponse {
  // Metadata contains the metadata of the session recording.
  teleport.recordingmetadata.v1.SessionRecordingMetadata metadata = 1;
}
